[OS-29] fix scrollbar display

--- a/client/src/styles/components/taskList.css
+++ b/client/src/styles/components/taskList.css
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  height: 100%;
+  overflow-x: auto;
 }
 
 .task-list__add-new-card {
-  width: 362px;
-  height: 160px;
   border: 1px dashed rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   display: flex;
@@ -15,6 +15,7 @@
   cursor: pointer;
   box-sizing: border-box;
   margin-bottom: 10px;
+  padding: 70px 0;
 }
 
 .task-list__add-new-card:hover {
