--- a/client/src/styles/components/workspaceHeader.css
+++ b/client/src/styles/components/workspaceHeader.css
@@ -3,7 +3,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 100px;
-  margin-bottom: 15px;
 }
 
 .workspace-header__wrapper {
@@ -62,7 +61,6 @@
   align-items: center;
   gap: 5px;
   border-radius: 8px;
-  padding: 0px 12px;
   transition: all 0.4s ease;
 }
 
@@ -75,6 +73,7 @@
   display: flex;
   align-items: center;
   font-size: 18px;
+  margin: 0;
 }
 
 .workspace-header__bookmark,
