--- a/client/src/styles/pages/homePage.css
+++ b/client/src/styles/pages/homePage.css
@@ -1,7 +1,11 @@
-.homePage__container {
+.page-container {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
 }
 
-.homePage__body{
-  height: 100%;
+.page-container__body {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
 }
