--- a/client/src/styles/pages/workspace.css
+++ b/client/src/styles/pages/workspace.css
@@ -1,19 +1,40 @@
 .workspace-container {
   background-color: #fff;
-  width: 100%;
-  min-height: 90vh;
-  box-sizing: border-box;
-  padding: 30px;
+  height: 100%;
+  position: relative;
+}
+
+.workspace-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 30px 30px 5px 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .workspace-body {
+  position: relative;
+  flex-grow: 1;
+}
+
+.workspace-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
   display: flex;
   flex-direction: row;
   gap: 30px;
-  overflow-x: auto;
+  overflow-y: hidden;
 }
 
-.workspace-body__task-list {
+.workspace-content__task-list {
   display: flex;
   flex-direction: column;
   gap: 10px;
